# ModelVault

./: .env.example  .gitignore  .modelvaultrc.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_modelvault.sh
control-plane/: pyproject.toml  run_tests.sh
control-plane/nexus/: __init__.py  config.py  git_utils.py  metadata.py
control-plane/scripts/: demo.py
control-plane/tests/: __init__.py  test_config.py  test_metadata.py  test_storage.py
data-plane/model-server/: model_loader.py  requirements.txt
data-plane/model-server/tests/: test_model_loader.py  test_server.py
docs/: DEMO.md  DOCKER.md  SETUP.md
modelvault/: cli.py  config.py  metadata.py
