[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelvault"
version = "0.1.0"
description = "A Model Artifact Management CLI - Git-integrated versioned storage for model files"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Samir Varma", github = "SamirVarma01"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "gitpython>=3.1.40",
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "pyyaml>=6.0",
]

[project.scripts]
modelvault = "modelvault.cli:app"

[tool.setuptools]
packages = ["modelvault"]
